--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
     "name": "jeudi",
     "version": "1.0.0",
-    "main": "index.js",
+    "main": "app.js",
     "type": "module",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "nodemon app.js",
         "start:pug": "node pug/isAdmin_pug.js"
     },
     "keywords": [],
